fixed z-index of the toc

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -21,3 +21,5 @@ $font-editor: Menlo, ui-monospace, SFMono-Regular, Monaco, Consolas, "Liberation
 // z-index
 $z-header: 100;
 $z-menu: 99;
+$z-sidebar-sticky: 10;
+$z-sidebar-sticky-btn: 11;
